--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Sleeping Rooster's Roost</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+<body>
   <h1>Welcome to Sleeping Rooster's website!</h1>
   <p>Here are some amazing facts about sleeping rooster!</p>
+</body>
 </html>
