--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
   <h1>Welcome to Sleeping Rooster's website!</h1>
   <p>Here are some amazing facts about sleeping rooster!</p>
+  <h2>Play some games!</h2>
+  <iframe src="https://scratch.mit.edu/projects/315830054/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </body>
 </html>
