--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <p>Here are some amazing facts about sleeping rooster!</p>
   <h2>Play some games!</h2>
   <iframe src="https://scratch.mit.edu/projects/315830054/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/8ZlGGZUmbXE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
